# dex-router

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
proto/: router.proto
rpc/: buf.gen.yaml  buf.yaml
rpc/proto/base/v1/: model.proto
rpc/proto/query/v1/: model.proto  service.proto
rpc/proto/router/v1/: model.proto  service.proto
src/: .env  app_state.rs  constants.rs  json_rpc.rs  main.rs  trace.rs
src/config/: error.rs  loader.rs  mod.rs  test.rs  types.rs  watcher.rs
src/logging/: log.rs  mod.rs  trace.rs
src/nacos_config/: entrance.rs  mod.rs  types.rs
src/router/: clmm_pool_utils.rs  mod.rs  pool_info.rs  route_utils.rs  router.rs  types.rs
src/rpc/: base.v1.rs  query.v1.rs  query.v1.tonic.rs  router.v1.rs  router.v1.tonic.rs
src/service/: mod.rs
src/service/core/: account_puller.rs  build_tx.rs  clmm_program.rs  mod.rs  result_utils.rs  types.rs
src/service/pb/: base.rs  mod.rs  query.rs  router.rs
src/service/query_service/: mod.rs  query_service.rs
src/service/router_service/: clmm_pool_utils.rs  mod.rs  pool_info.rs  route_utils.rs  router_service.rs  types.rs
