[package]
name = "dex-router"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13.0"
warp = "0.3.7"
anchor-lang = "0.31.0"
raydium-amm-v3 = {git = "https://github.com/wanggeng01041454/raydium-clmm.git", branch = "v31_my_dev"}
nacos-sdk = "0.5.0"
anyhow = "1.0.97"
lazy_static = "1.5.0"
rand = "0.9.0"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-account-decoder-client-types = "2.2.7"
spl-token-2022 = "8.0.1"

# 构建依赖
[build-dependencies]
tonic-build = "0.13.0"

