[package]
name = "dex-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
rand = "0.9"
prost = "0.13.5"
dotenv = "0.15.0"
rust_decimal = {version = "1.36.0", features = ["maths"]}
thiserror = "1.0.26"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tonic = "0.13.0"
warp = "0.3.7"
anchor-lang = "0.31.0"
raydium-amm-v3 = { git = "https://github.com/wanggeng01041454/raydium-clmm.git", branch = "v31_my_dev" }
nacos-sdk = "0.5.0"
anyhow = "1.0.97"
lazy_static = "1.5.0"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-account-decoder-client-types = "2.2.7"
spl-token-2022 = "8.0.1"
tonic-reflection = "0.13"
tonic-web = "0.13"
tower-http = "0.6.2"
bytes = { version = "1", features = ["serde"] }
prost-types = "0.13.5"
chrono = { version = "0.4.40", features = ["serde"] }                                                    # 日期时间支持（可选）
anchor-client = "0.31.0"
spl-token = "8.0.0"
anchor-spl = "0.31.0"
spl-associated-token-account = "6.0.0"

## logs
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.1.4"

tower = "0.5.2"
log = "0.4.27"
bincode = "1.3.3"
base64 = "0.22.1"
hex = "0.4.3"

# 构建依赖
[build-dependencies]
tonic-build = "0.13.0"
prost-build = "0.13.5"
